objectbox/lib/src/bindings/objectbox-c.dart


  /// /// Time series: get the limits (min/max time values) over objects within the given time range
  /// /// @param out_min_id pointer to receive an output (may be NULL)
  /// /// @param out_min_value pointer to receive an output (may be NULL)
  /// /// @param out_max_id pointer to receive an output (may be NULL)
  /// /// @param out_max_value pointer to receive an output (may be NULL)
  /// /// @returns OBX_NOT_FOUND if no objects are stored in the given range
  int cursor_ts_min_max_range(
    ffi.Pointer<OBX_cursor> cursor,
    int range_begin,
    int range_end,
    ffi.Pointer<ffi.Uint64> out_min_id,
    ffi.Pointer<ffi.Int64> out_min_value,
    ffi.Pointer<ffi.Uint64> out_max_id,
    ffi.Pointer<ffi.Int64> out_max_value,
  ) {
    _cursor_ts_min_max_range ??= _dylib.lookupFunction<
        _c_cursor_ts_min_max_range,
        _dart_cursor_ts_min_max_range>('obx_cursor_ts_min_max_range');
    return _cursor_ts_min_max_range(
      cursor,
      range_begin,
      range_end,
      out_min_id,
      out_min_value,
      out_max_id,
      out_max_value,
    );
  }

  _dart_cursor_ts_min_max_range _cursor_ts_min_max_range;

  /// /// Get access to the box for the given entity. A box may be used across threads.
  /// /// Boxes are shared instances and managed by the store so there's no need to close/free them manually.
  ffi.Pointer<OBX_box> box(
    ffi.Pointer<OBX_store> store,
    int entity_id,
  ) {
    _box ??= _dylib.lookupFunction<_c_box, _dart_box>('obx_box');
    return _box(
      store,
      entity_id,
    );
  }

  _dart_box _box;

  /// /// Get access to the store this box belongs to - utility for when you only have access to the `box` variable but need
  /// /// some store method, such as starting a transaction.
  /// /// This doesn't produce a new instance of OBX_store, just gives you back the same pointer you've created this box with.
  /// /// In other words, don't close the returned store separately.
  ffi.Pointer<OBX_store> box_store(
    ffi.Pointer<OBX_box> box,
  ) {
    _box_store ??=
        _dylib.lookupFunction<_c_box_store, _dart_box_store>('obx_box_store');
    return _box_store(
      box,
    );
  }

  _dart_box_store _box_store;

  /// /// Check whether a given object exists in the box.
  int box_contains(
    ffi.Pointer<OBX_box> box,
    int id,
    ffi.Pointer<ffi.Uint8> out_contains,
  ) {
    _box_contains ??=
        _dylib.lookupFunction<_c_box_contains, _dart_box_contains>(
            'obx_box_contains');
    return _box_contains(
      box,
      id,
      out_contains,
    );
  }

  _dart_box_contains _box_contains;

  /// /// Check whether this box contains objects with all of the IDs given.
  /// /// @param out_contains is set to true if all of the IDs are present, otherwise false
  int box_contains_many(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<OBX_id_array> ids,
    ffi.Pointer<ffi.Uint8> out_contains,
  ) {
    _box_contains_many ??=
        _dylib.lookupFunction<_c_box_contains_many, _dart_box_contains_many>(
            'obx_box_contains_many');
    return _box_contains_many(
      box,
      ids,
      out_contains,
    );
  }

  _dart_box_contains_many _box_contains_many;

  /// /// Fetch a single object from the box; must be called inside a (reentrant) transaction.
  /// /// The exposed data comes directly from the OS to allow zero-copy access, which limits the data lifetime:
  /// /// \attention The exposed data is only valid as long as the (top) transaction is still active and no write
  /// /// \attention operation (e.g. put/remove) was executed. Accessing data after this is undefined behavior.
  /// /// @returns OBX_ERROR_ILLEGAL_STATE if not inside of an active transaction (see obx_txn_read() and obx_txn_write())
  int box_get(
    ffi.Pointer<OBX_box> box,
    int id,
    ffi.Pointer<ffi.Pointer<ffi.Void>> data,
    ffi.Pointer<ffi.IntPtr> size,
  ) {
    _box_get ??=
        _dylib.lookupFunction<_c_box_get, _dart_box_get>('obx_box_get');
    return _box_get(
      box,
      id,
      data,
      size,
    );
  }

  _dart_box_get _box_get;

  /// /// Fetch multiple objects for the given IDs from the box; must be called inside a (reentrant) transaction.
  /// /// \attention See obx_box_get() for important notes on the limited lifetime of the exposed data.
  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details; e.g. code
  /// ///               OBX_ERROR_ILLEGAL_STATE will be set if not inside of an active transaction
  /// ///               (see obx_txn_read() and obx_txn_write())
  ffi.Pointer<OBX_bytes_array> box_get_many(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<OBX_id_array> ids,
  ) {
    _box_get_many ??=
        _dylib.lookupFunction<_c_box_get_many, _dart_box_get_many>(
            'obx_box_get_many');
    return _box_get_many(
      box,
      ids,
    );
  }

  _dart_box_get_many _box_get_many;

  /// /// Fetch all objects from the box; must be called inside a (reentrant) transaction.
  /// /// NOTE: don't call this in 32 bit mode! Use obx_box_visit_all() instead.
  /// /// \attention See obx_box_get() for important notes on the limited lifetime of the exposed data.
  /// /// @returns NULL if the operation failed, see functions like obx_last_error_code() to get error details; e.g. code
  /// ///               OBX_ERROR_ILLEGAL_STATE will be set if not inside of an active transaction
  /// ///               (see obx_txn_read() and obx_txn_write())
  ffi.Pointer<OBX_bytes_array> box_get_all(
    ffi.Pointer<OBX_box> box,
  ) {
    _box_get_all ??= _dylib
        .lookupFunction<_c_box_get_all, _dart_box_get_all>('obx_box_get_all');
    return _box_get_all(
      box,
    );
  }

  _dart_box_get_all _box_get_all;

  /// /// Read given objects from the database in a single transaction.
  /// /// Call the visitor() on each object, passing user_data, object data & size as arguments.
  /// /// The given visitor must return true to keep receiving results, false to cancel.
  /// /// If an object is not found, the visitor() is still called, passing NULL as data and a 0 as size.
  int box_visit_many(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<OBX_id_array> ids,
    ffi.Pointer<ffi.NativeFunction<obx_data_visitor>> visitor,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    _box_visit_many ??=
        _dylib.lookupFunction<_c_box_visit_many, _dart_box_visit_many>(
            'obx_box_visit_many');
    return _box_visit_many(
      box,
      ids,
      visitor,
      user_data,
    );
  }

  _dart_box_visit_many _box_visit_many;

  /// /// Read all objects in a single transaction.
  /// /// Calls the visitor() on each object, passing visitor_arg, object data & size as arguments.
  /// /// The given visitor must return true to keep receiving results, false to cancel.
  int box_visit_all(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<ffi.NativeFunction<obx_data_visitor>> visitor,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    _box_visit_all ??=
        _dylib.lookupFunction<_c_box_visit_all, _dart_box_visit_all>(
            'obx_box_visit_all');
    return _box_visit_all(
      box,
      visitor,
      user_data,
    );
  }

  _dart_box_visit_all _box_visit_all;

  /// /// Prepares an ID for insertion: pass in 0 (zero) to reserve a new ID or an existing ID to check/prepare it.
  /// /// @param id_or_zero The ID of the entity. If you pass 0, this will generate a new one.
  /// /// @seealso obx_cursor_id_for_put()
  int box_id_for_put(
    ffi.Pointer<OBX_box> box,
    int id_or_zero,
  ) {
    _box_id_for_put ??=
        _dylib.lookupFunction<_c_box_id_for_put, _dart_box_id_for_put>(
            'obx_box_id_for_put');
    return _box_id_for_put(
      box,
      id_or_zero,
    );
  }

  _dart_box_id_for_put _box_id_for_put;

  /// /// Reserve the given number of (new) IDs for insertion; a bulk version of obx_box_id_for_put().
  /// /// @param count number of IDs to reserve, max 10000
  /// /// @param out_first_id the first ID of the sequence as
  /// /// @returns an error in case the required number of IDs could not be reserved.
  int box_ids_for_put(
    ffi.Pointer<OBX_box> box,
    int count,
    ffi.Pointer<ffi.Uint64> out_first_id,
  ) {
    _box_ids_for_put ??=
        _dylib.lookupFunction<_c_box_ids_for_put, _dart_box_ids_for_put>(
            'obx_box_ids_for_put');
    return _box_ids_for_put(
      box,
      count,
      out_first_id,
    );
  }

  _dart_box_ids_for_put _box_ids_for_put;

  /// /// Put the given object using the given ID synchronously; note that the ID also must match the one present in data.
  /// /// @param id An ID usually reserved via obx_box_id_for_put().
  /// /// @see obx_box_put5() to additionally provide a put mode
  /// /// @see obx_box_put_object() for a variant not requiring reserving IDs
  int box_put(
    ffi.Pointer<OBX_box> box,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _box_put ??=
        _dylib.lookupFunction<_c_box_put, _dart_box_put>('obx_box_put');
    return _box_put(
      box,
      id,
      data,
      size,
    );
  }

  _dart_box_put _box_put;

  /// /// Convenience for obx_box_put5() with OBXPutMode_INSERT.
  /// /// @param id non-zero
  /// /// @returns OBX_ERROR_ID_ALREADY_EXISTS if an insert fails because of a colliding ID
  int box_insert(
    ffi.Pointer<OBX_box> box,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _box_insert ??= _dylib
        .lookupFunction<_c_box_insert, _dart_box_insert>('obx_box_insert');
    return _box_insert(
      box,
      id,
      data,
      size,
    );
  }

  _dart_box_insert _box_insert;

  /// /// Convenience for obx_cursor_put4() with OBXPutMode_UPDATE.
  /// /// @param id non-zero
  /// /// @returns OBX_ERROR_ID_NOT_FOUND  if an update fails because the given ID does not represent any object
  int box_update(
    ffi.Pointer<OBX_box> box,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _box_update ??= _dylib
        .lookupFunction<_c_box_update, _dart_box_update>('obx_box_update');
    return _box_update(
      box,
      id,
      data,
      size,
    );
  }

  _dart_box_update _box_update;

  /// /// Put the given object using the given ID synchronously; note that the ID also must match the one present in data.
  /// /// @param id An ID usually reserved via obx_box_id_for_put().
  /// /// @see obx_box_put() for standard put mode
  /// /// @see obx_box_put_object() for a variant not requiring reserving IDs
  int box_put5(
    ffi.Pointer<OBX_box> box,
    int id,
    ffi.Pointer<ffi.Void> data,
    int size,
    int mode,
  ) {
    _box_put5 ??=
        _dylib.lookupFunction<_c_box_put5, _dart_box_put5>('obx_box_put5');
    return _box_put5(
      box,
      id,
      data,
      size,
      mode,
    );
  }

  _dart_box_put5 _box_put5;

  /// /// FB ID slot must be present in the given data; new entities must have an ID value of zero or OBX_ID_NEW.
  /// /// @param data writable data buffer, which may be updated for the ID
  /// /// @returns 0 on error
  int box_put_object(
    ffi.Pointer<OBX_box> box,
    ffi.Pointer<ffi.Void> data,
    int size,
  ) {
    _box_put_object ??=
        _dylib.lookupFunction<_c_box_put_object, _dart_box_put_object>(
            'obx_box_put_object');
    return _box_put_object(
      box,
      data,
      size,
    );
  }

  _dart_box_put_object _box_put_object;
